--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,16 +1,42 @@
 # Sample Authors
 # Remove file or replace with your own
+#
+# Billy Rick:
+#   name: Billy Rick
+#   picture: /images/bio-photo-2.jpg
+#   twitter: "@billyrick"
+#   links:
+#     - title: Twitter
+#       url: https://twitter.com/billyrick
+#       icon: fab fa-twitter-square
 
-Billy Rick:
-  name: Billy Rick
-  picture: /images/bio-photo-2.jpg
-  twitter: "@billyrick"
+# Cornelius Fiddlebone:
+#   name: Cornelius Fiddlebone
+#   picture: /images/bio-photo.jpg
+#   twitter: corneliusfiddlebone
+
+Wo TIAN:
+  name: Wo Tian
+
+Tian WU:
+  name: Tian Wu
+  twitter: "@Phi_W5"
   links:
     - title: Twitter
-      url: https://twitter.com/billyrick
+      url: https://twitter.com/phi_W5
       icon: fab fa-twitter-square
 
-Cornelius Fiddlebone:
-  name: Cornelius Fiddlebone
-  picture: /images/bio-photo.jpg
-  twitter: corneliusfiddlebone
+Yaoyi XU:
+  name: Yaoyi Xu
+
+Ruoqian WU:
+  name: Ruoqian Wu
+
+Ruiqiao JIANG:
+  name: Ruiqiao Jiang
+
+Guoyu WANG:
+  name: Guoyu Wang
+
+Hengrui XU:
+  name: Hengrui Xu
