--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,14 +6,12 @@
 #   url: /posts/
 # - title: Categories
 #   url: /categories/
-# - title: Tags
-#   url: /tags/
+- title: Tags
+  url: /tags/
 # - title: Recipes
 #   url: /recipes/
 # - title: Search
 #   url: /search/
-# - title: External Page
-#   url: https://the-page.com/you-want-to-link-to.html
 - title: Meetings
   url: /meetings/
 - title: Work Records
@@ -24,3 +22,6 @@
   url: /projectstatus/
 - title: Decisions
   url: /decisionlogs/
+
+- title: Developing
+  url: http://tl20212.cecs.anu.edu.au/home.html
