move project status to tags

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,8 +16,8 @@
   url: /workrecords/
 # - title: Retrospectives
 #   url: /retrospectives/
-- title: Status
-  url: /projectstatus/
+# - title: Status
+#   url: /projectstatus/
 # - title: Decisions
 #   url: /decisionlogs/
 - title: Search
