add google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,8 @@ google_fonts:
     weights: "400,400i,700,700i"
   - name: "Lora"
     weights: "400,400i,700,700i"
-google_analytics: # Google Analytics id, e.g. "UA-NNNNNNNN-N"
+# google_analytics: # Google Analytics id, e.g. "UA-NNNNNNNN-N"
+google_analytics: "G-2M6G855D7E"
 disqus:
   shortname: # Disqus shortname, e.g. "my_disqus_shortname"
 twitter:
