--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,14 @@ theme: jekyll-theme-so-simple
 # remote_theme: mmistakes/so-simple-theme
 skin: "/assets/css/skins/default.css"
 locale: en-US
-title: "Welcome to OptoFab"
-description: "TechLauncher Team OptoFab Semester 2"
-baseurl: # the subpath of your site, e.g. "/blog"
+title: "Team OptoFab :handshake: TechLauncher"
+description: "@ANU 2021 Semester 2"
+# baseurl: # the subpath of your site, e.g. "/blog"
+baseurl: "/"
 # url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 url: https://optofab.github.io
-logo: # path of site logo, e.g. "/images/logo.png"
+# logo: # path of site logo, e.g. "/images/logo.png"
+logo: "/images/ANFFlogo.png"
 date_format: "%B %-d, %Y"
 # read_time: # reading time estimates, e.g. true
 read_time: true
