--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,11 +2,11 @@
 
 - title: Home
   url: /
-# - title: Posts
-#   url: /posts/
+- title: Posts
+  url: /posts/
 # - title: Categories
 #   url: /categories/
-- title: Tags
+- title: Archive
   url: /tags/
 # - title: Recipes
 #   url: /recipes/
