--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,6 +34,8 @@
   url: /logs/
 - title: Reflection Log
   url: /logs/
+- title: Work Records
+  url: /logs/
 - title: Product
   url: http://tl20212.cecs.anu.edu.au/home.html
 - title: 🔍
