--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,7 +35,7 @@
 - title: Reflection Log
   url: /logs/
 - title: Work Records
-  url: /logs/
+  url: /work_records/
 - title: Product
   url: http://tl20212.cecs.anu.edu.au/home.html
 - title: 🔍
