--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,11 +29,11 @@
 - title: Logs
   url: /logs/
 - title: Decison Making
-  url: /logs/
+  url: /decision_making/
 - title: Meeting Minutes
-  url: /logs/
+  url: /meeting_minutes/
 - title: Reflection Log
-  url: /logs/
+  url: /reflection_log/
 - title: Work Records
   url: /work_records/
 - title: Product
