update author avatar

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -21,7 +21,7 @@ Wo TIAN:
 Tian WU:
   name: Tian Wu
   # twitter: "@Phi_W5"
-  # picture: "/images/Phi.jpg"
+  picture: "/images/Phi.jpg"
   # links:
   #   - title: Twitter
   #     url: https://twitter.com/phi_W5
