--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,6 +36,6 @@
 - title: Work Records
   url: /work_records/
 - title: Product
-  url: http://tl20212.cecs.anu.edu.au/home.html
+  url: http://tl20212.cecs.anu.edu.au
 - title: 🔍
   url: /search/
